noinst_PROGRAMS = ##

#works on win32 and X
if HAVE_CLUTTER_WITH_TEXTURE_RECTANGLE

noinst_PROGRAMS += cluttershare

cluttershare_SOURCES = cluttershare.c

cluttershare_CFLAGS=$(GST_PLUGINS_GL_CFLAGS) $(GST_CFLAGS) \
    $(GL_CFLAGS) $(CLUTTER_CFLAGS)
cluttershare_LDADD=$(GST_PLUGINS_GL_LIBS) $(GST_LIBS) \
    $(GL_LIBS) $(CLUTTER_LIBS)

endif


if HAVE_CLUTTER_GLX
if HAVE_CLUTTER_X11

noinst_PROGRAMS += clutteractor clutteractortee

clutteractor_SOURCES = clutteractor.c

clutteractor_CFLAGS=$(GST_PLUGINS_GL_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) \
	$(GL_CFLAGS) $(GTK_CFLAGS) \
	$(CLUTTER_CFLAGS) \
	$(CLUTTER_GLX_CFLAGS) $(CLUTTER_X11_CFLAGS)
clutteractor_LDADD=$(GST_PLUGINS_GL_LIBS) $(GST_PLUGINS_BASE_LIBS) $(GST_LIBS) \
	$(GL_LIBS) $(GTK_LIBS) -lgstinterfaces-$(GST_MAJORMINOR) \
	$(CLUTTER_LIBS) \
	$(CLUTTER_GLX_LIBS) $(CLUTTER_X11_LIBS)

clutteractortee_SOURCES = clutteractortee.c

clutteractortee_CFLAGS=$(GST_PLUGINS_GL_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) \
	$(GL_CFLAGS) $(GTK_CFLAGS) \
	$(CLUTTER_CFLAGS) \
	$(CLUTTER_GLX_CFLAGS) $(CLUTTER_X11_CFLAGS)
clutteractortee_LDADD=$(GST_PLUGINS_GL_LIBS) $(GST_PLUGINS_BASE_LIBS) $(GST_LIBS) \
	$(GL_LIBS) $(GTK_LIBS) -lgstinterfaces-$(GST_MAJORMINOR) \
	$(CLUTTER_LIBS) \
	$(CLUTTER_GLX_LIBS) $(CLUTTER_X11_LIBS)

endif
endif
